fixed z-index to show startmenu

--- a/src/pages/strategy/strategy.css
+++ b/src/pages/strategy/strategy.css
@@ -7,22 +7,22 @@ body {
 	margin:0px auto;
 }
 #error {
-	width:800px;
+	width:700px;
 	margin:10px 0px 20px 0px;
 	display:none;
 }
 #body {
-	width:800px;
+	width:700px;
 	margin:10px 0px 10px 0px;
 }
 
 /* MENU TABS
 -------------------------------*/
 #menu {
-	z-index: 10;
 	width:100px;
 }
 #menu .menutable {
+	z-index: 10;
 	position:absolute;
 	top:80px;
 	background:#fff;
